--- a/chapter3.tex
+++ b/chapter3.tex
@@ -104,7 +104,7 @@ The user management process enables administrators to create, view, update, and 
         \hline
         \textbf{Section} & \textbf{Details} \\
         \hline
-        Use Case & Manage User Accounts \\
+        Use Case & Assign Role \\
         \hline
         Actor & Super Admin \\
         \hline
