--- a/chapter4.tex
+++ b/chapter4.tex
@@ -10,7 +10,7 @@ This chapter explores the integration of artificial intelligence capabilities wi
 
 The AI features presented in this chapter represent a significant competitive advantage for our platform, enabling more accurate property valuations, personalized recommendations, intelligent assistance, and efficient administrative operations. Each model has been carefully designed to solve real-world challenges faced by users interacting with real estate data and transactions.
 
-\section{Data Collection and Scraping}
+\section{Sprint 2: Data Collection and Scraping}
 \subsection*{Overview}
 This section details the data collection processes implemented to gather the real estate market data required for our AI models. 
 
@@ -70,7 +70,7 @@ Our scraping system uses a distributed architecture with the following component
     \label{fig:scraping-workchart}
 \end{figure}
 
-\section{Property Valuation Prediction Model}
+\section{Sprint 3: Property Valuation Prediction Model}
 \subsection*{Overview}
 The Property Valuation Prediction Model is designed to estimate both the market value and potential rental income for real estate properties. This provides investors with crucial information to make informed investment decisions.
 
@@ -255,7 +255,7 @@ To ensure a seamless and reliable user experience on the mobile platform, the in
 
 \newpage
 
-\section{Real Estate Assistant (NLP Chatbot)}
+\section{Sprint 4: Real Estate Assistant (NLP Chatbot)}
 \subsection*{Overview}
 The Real Estate Assistant is an intelligent NLP-powered chatbot designed to provide investors with instant access to real estate legal information and guidance. This AI assistant helps users understand complex legal concepts, property regulations, and investment procedures through natural language conversations.
 
@@ -513,7 +513,7 @@ The Role-Based Backoffice Agent underwent comprehensive testing across all user 
     \label{tab:backoffice-test-scenarios}
 \end{table}
 \newpage
-\section{Investor-Focused Recommendation System}
+\section{Sprint 5: Investor-Focused Recommendation System}
 \subsection*{Overview}
 The Investor-Focused Recommendation System is an advanced AI model that analyzes investor behavior, preferences, and market conditions to provide personalized property investment recommendations. This system leverages machine learning algorithms to match investors with optimal investment opportunities based on their risk profile, budget, and investment goals.
 
